# svea_vision_2

./: .gitignore
src/svea_vision/: setup.py
src/svea_vision/launch/: zed_main.launch.py
src/svea_vision/svea_vision/nodes/object/: object_detect.py
src/svea_vision/svea_vision/nodes/person/: person_state_estimation.py  person_state_estimation_xyvv.py
src/svea_vision/svea_vision/utils/: kalman_filter.py  kalman_filter_xyvv.py
src/svea_vision_experimental/: package.xml  setup.cfg  setup.py
src/svea_vision_experimental/launch/: dual_object_detect.launch.py
src/svea_vision_experimental/resource/: svea_vision_experimental
src/svea_vision_experimental/svea_vision_experimental/nodes/object/: dual_object_detect.py
src/svea_vision_msgs/: CMakeLists.txt
src/svea_vision_msgs/msg/: PersonStateKFDebug.msg  PersonStateKFDebugArray.msg
